[package]
name = "bactaxid"
version = "0.1.0"
edition = "2021"
authors = ["Tu Nombre <tu.email@example.com>"]
description = "A fast bacterial taxonomy identification tool using SuperMinHash2 sketching"
license = "MIT"
repository = "https://github.com/tu_usuario/bactaxid"
keywords = ["bioinformatics", "taxonomy", "sketching", "bacteria", "classification"]
categories = ["science", "command-line-utilities"]


[dependencies]
wyrand = "0.3.2"
rand = "0.9.1"
bincode = "1.3"
toml = "0.9.2"


# FASTA/FASTQ parsing - Actualizado de 0.6 a 0.6.3
needletail = "0.6.3"

# High-performance HashMap - Actualizado de 0.15 a 0.15
hashbrown = { version = "0.15", features = ["serde","rayon"] }

# Nucleotide Hashing
nthash = "0.5.1"

# Serialization - Actualizado de 0.17 a 0.18.6
savefile = "0.18.6"
savefile-derive = "0.18.6"

# Graph data structures for taxonomy - Actualizado de 0.6 a 0.7.2
petgraph = { version = "0.7", features = ["serde"] }

# Database - Actualizado de 1.3 a 1.3.1
duckdb = { version = "1.3", features = ["bundled"] }

# CLI and utilities - Actualizado de 4.0 a 4.5.40
clap = { version = "4.5", features = ["derive"] }

# Serialization - Actualizados a versiones más recientes
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

# Error handling - Actualizados
anyhow = "1.0"
thiserror = "2.0"

# Logging - Actualizados
log = "0.4"
env_logger = "0.11"

# Parallelization - Actualizado de 1.10 a 1.10
rayon = "1.10"
bloom = "0.3.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.20.0"

[[bin]]
name = "bactaxid"
path = "src/main.rs"

[lib]
name = "bactaxid"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
