[package]
name = "bactaxid"
version = "0.1.0"
edition = "2021"
authors = ["Tu Nombre <tu.email@example.com>"]
description = "A fast bacterial taxonomy identification tool using SuperMinHash2 sketching"
license = "MIT"
repository = "https://github.com/tu_usuario/bactaxid"
keywords = ["bioinformatics", "taxonomy", "sketching", "bacteria", "classification"]
categories = ["science", "command-line-utilities"]


[dependencies]
wyrand = "0.3.2"
rand = "0.9.1"
bincode = "1.3"
toml = "0.9.2"
twox-hash = "2.1.2"


# FASTA/FASTQ parsing - Updated from 0.6 to 0.6.3
needletail = "0.6.3"

# High-performance HashMap - Updated to 0.15
hashbrown = { version = "0.15", features = ["serde","rayon"] }

# Nucleotide Hashing
nthash = "0.5.1"

# Serialization - Updated from 0.17 to 0.18.6
savefile = "0.18.6"
savefile-derive = "0.18.6"

# Graph data structures for taxonomy - Updated from 0.6 to 0.7.2
petgraph = { version = "0.8.2", features = ["serde"] }

# Database - Updated from 1.3 to 1.3.1
duckdb = { version = "1.3", features = ["bundled"] }

# CLI and utilities - Updated from 4.0 to 4.5.40
clap = { version = "4.5", features = ["derive"] }

# Serialization - Updated to more recent versions
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

# Error handling - Updated
anyhow = "1.0"
thiserror = "2.0"

# Logging - Updated
log = "0.4"
env_logger = "0.11"

# Parallelization - Updated to 1.10
rayon = "1.10"
bloom = "0.3.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.20.0"

[[bin]]
name = "bactaxid"
path = "src/main.rs"

[lib]
name = "bactaxid"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
